overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
+html, body {
+  overflow-x: hidden; 
+  width: 100%;
+  position: relative;
+}
+
+#root {
+  overflow-x: hidden;
+}
+
+@media (max-width: 576px) {
+  .row {
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+  }
+  
+
+  .container {
+    max-width: 100vw !important;
+    overflow-x: hidden;
+  }
+}
 @media (max-width: 576px) {
 
   .container {
